ARROW-2448: [Plasma] Reference counting for PlasmaClient::Impl

This is a followup to https://github.com/apache/arrow/pull/1933 which does reference counting of the PlasmaClient held by PlasmaBuffers to avoid the segfault in ARROW-2448.

Author: Philipp Moritz <pcmoritz@gmail.com>

Closes #1939 from pcmoritz/autoget-sharedptr and squashes the following commits:

f1e6e8b7 <Philipp Moritz> fix test
2da395f9 <Philipp Moritz> update
13b12049 <Philipp Moritz> fixes
b68b15e4 <Philipp Moritz> fix ObjectStatus
6d560db4 <Philipp Moritz> remove headers
94cdfd7c <Philipp Moritz> add test
6798ed01 <Philipp Moritz> Give shared_ptr of PlasmaClient::Impl to PlasmaBuffer